umap/static/umap/map.css
/* ... */
.umap-drop-icon .icon_container img {
    vertical-align: middle;
    max-width: 24px !important;
    max-height: 24px!important;
}
.umap-div-icon .icon_container span,
.umap-drop-icon .icon_container span {
    vertical-align: middle;
    color: white;
    font-weight: bold;
}
.umap-circle-icon {
    border: 1px solid white;
    border-radius: 10px 10px 10px 10px;
    height: 12px;
    width: 12px;
}
.umap-ball-icon .icon_container {
    background-color: darkblue;
    background: radial-gradient(circle at 6px 38% , white -4px, darkblue 8px) repeat scroll 0 0 transparent;
    border-radius: 8px 8px 8px 8px;
    box-shadow: 1px 21px 6px -3px black;
    height: 16px;
    opacity: 0.9;
    text-align: center;
    width: 16px;
}
.umap-ball-icon .icon_arrow {
    background-color: black;
    height: 16px;
    left: 7px;
    opacity: 0.9;
    position: relative;
    top: -1px;
    width: 2px;
}
.umap-edit-enabled .readonly {
    cursor: not-allowed;
}


/* ********************************* */
/*         Ajax loader               */
/* ********************************* */
.umap-loading .umap-loader
{
    display: block;
    -webkit-animation: shift-rightwards 3s ease-in-out infinite;
    -moz-animation: shift-rightwards 3s ease-in-out infinite;
    -ms-animation: shift-rightwards 3s ease-in-out infinite;
    -o-animation: shift-rightwards 3s ease-in-out infinite;
    animation: shift-rightwards 3s ease-in-out infinite;
    -webkit-animation-delay: .2s;
    -moz-animation-delay: .2s;
    -o-animation-delay: .2s;
    animation-delay: .2s;
}
.umap-loader
{
    position: absolute;
    display: none;
    top: 0;
    left: 0;
    right: 0;
    height: 4px;
    z-index: 10100;
    background-color: #79c1c0 !important;
    -webkit-transform: translateX(100%);
    -moz-transform: translateX(100%);
    -o-transform: translateX(100%);
    transform: translateX(100%);
}


@-webkit-keyframes shift-rightwards
{
    0%
    {
        -webkit-transform:translateX(-100%);
        -moz-transform:translateX(-100%);
        -o-transform:translateX(-100%);
        transform:translateX(-100%);
    }

    40%
    {
        -webkit-transform:translateX(0%);
        -moz-transform:translateX(0%);
        -o-transform:translateX(0%);
        transform:translateX(0%);
    }

    60%
    {
        -webkit-transform:translateX(0%);
        -moz-transform:translateX(0%);
        -o-transform:translateX(0%);
        transform:translateX(0%);
    }

    100%
    {
        -webkit-transform:translateX(100%);
        -moz-transform:translateX(100%);
        -o-transform:translateX(100%);
        transform:translateX(100%);
    }

}
@-moz-keyframes shift-rightwards
{
    0%
    {
        -webkit-transform:translateX(-100%);
        -moz-transform:translateX(-100%);
        -o-transform:translateX(-100%);
        transform:translateX(-100%);
    }

    40%
    {
        -webkit-transform:translateX(0%);
        -moz-transform:translateX(0%);
        -o-transform:translateX(0%);
        transform:translateX(0%);
    }

    60%
    {
        -webkit-transform:translateX(0%);
        -moz-transform:translateX(0%);
        -o-transform:translateX(0%);
        transform:translateX(0%);
    }

    100%
    {
        -webkit-transform:translateX(100%);
        -moz-transform:translateX(100%);
        -o-transform:translateX(100%);
        transform:translateX(100%);
    }

}
@-o-keyframes shift-rightwards
{
    0%
    {
        -webkit-transform:translateX(-100%);
        -moz-transform:translateX(-100%);
        -o-transform:translateX(-100%);
        transform:translateX(-100%);
    }

    40%
    {
        -webkit-transform:translateX(0%);
        -moz-transform:translateX(0%);
        -o-transform:translateX(0%);
        transform:translateX(0%);
    }

    60%
    {
        -webkit-transform:translateX(0%);
        -moz-transform:translateX(0%);
        -o-transform:translateX(0%);
        transform:translateX(0%);
    }

    100%
    {
        -webkit-transform:translateX(100%);
        -moz-transform:translateX(100%);
        -o-transform:translateX(100%);
        transform:translateX(100%);
    }

}
@keyframes shift-rightwards
{
    0%
    {
        -webkit-transform:translateX(-100%);
        -moz-transform:translateX(-100%);
        -o-transform:translateX(-100%);
        transform:translateX(-100%);
    }

    40%
    {
        -webkit-transform:translateX(0%);
        -moz-transform:translateX(0%);
        -o-transform:translateX(0%);
        transform:translateX(0%);
    }

    60%
    {
        -webkit-transform:translateX(0%);
        -moz-transform:translateX(0%);
        -o-transform:translateX(0%);
        transform:translateX(0%);
    }

    100%
    {
        -webkit-transform:translateX(100%);
        -moz-transform:translateX(100%);
        -o-transform:translateX(100%);
        transform:translateX(100%);
    }
}

/* *************************** */
/* Overriding leaflet defaults */
/* *************************** */

.leaflet-control-zoom a, .leaflet-control-zoom a:hover {
    height: 36px;
    width: 36px;
    line-height: 36px;
}
.leaflet-container .leaflet-control-zoom {
    margin-left: 10px;
}
.leaflet-top {
    z-index: 1001;
}
.leaflet-popup-content {
    min-width: 100px;
    line-height: inherit;
}
.leaflet-popup-content-wrapper, .leaflet-popup-tip {
    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.4);
}
.leaflet-popup-content-wrapper {
    border-radius: 4px;
}
.umap-popup-content {
    max-height: 500px;
    flex-grow: 1;
    margin-bottom: 4px;
    display: flex;
    flex-direction: column;
}
.umap-popup-content iframe {
    min-width: 310px;
}
.umap-popup-content th,
.umap-popup-content td {
    word-break: break-word;
}
.umap-popup-container {
    flex-grow: 1;
    padding: 0 10px;
}
.leaflet-popup-content h3 {
    margin-bottom: 0;
}
.leaflet-control-toolbar,
.leaflet-bar {
    box-shadow: none;
}
.marker-cluster {
    background-color: white;
    width: 40px;
    height: 40px;
}
/* ... */

